fix some layout issues for tablet resolution

--- a/themes/default/static/css/less/components/headers.less
+++ b/themes/default/static/css/less/components/headers.less
@@ -7,6 +7,9 @@
     font-size: 24px;
     padding-bottom:7px;
   }
+  h2 {
+    font-family: 'pt_sansbold';
+  }
 }
 
 // SHARED HEADER STYLES
